[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nrbf"
version = "0.1.2"
description = "Pure-Python parser for .NET BinaryFormatter (MS-NRBF) streams"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["dotnet", "nrbf", "binaryformatter", "deserialize", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
yaml = ["pyyaml"]

[project.scripts]
nrbfdump = "nrbfdump:main"

[project.urls]
Homepage = "https://github.com/crognlie/python-nrbf"
Repository = "https://github.com/crognlie/python-nrbf"
Issues = "https://github.com/crognlie/python-nrbf/issues"

[tool.setuptools]
py-modules = ["nrbf", "nrbfdump"]
